# aero_open_hand_controller

./: .gitignore  .gitmodules  CLAUDE.md  README.md  cli.py  gui.py  hand_simulator.py  notes.txt  pyproject.toml  requirements.txt  sim_log_analyze.py
.claude/: settings.local.json
aero-open-sim/: README.md
aero-open-sim/mujoco/: README.md
apps/: cli.py  gui.py
arduino_code/: HandConfig.h
docs/: TUNING.md  feetech_protocol.md
hand/: hand.py  macro.py
hand/sdk/: hand_esp32.py
hand/ttl/: hand_ttl.py  pid.py  serial_file_logger.py
hand_detector/: __init__.py  _landmark_math.py  detector_params.json  detector_to_positions.py
hand_detector_streaming_server/: server.py
src/hand/: __init__.py
src/hand/sdk/: __init__.py
src/hand/ttl/: __init__.py  hand_ttl.py  pid.py  serial_file_logger.py  servo.py  servo_protocol.py
src/hand_detector/: __init__.py  hand_detector.py
src/hand_detector/detectors/: __init__.py  detector.py  mediapipe.py
src/hand_detector/joint_calculators/: 2d_joint_calculator.py  3d_calculator.py  __init__.py  joint_calculator.py
src/hand_detector/sources/: __init__.py  intel_d405.py  source.py  webcam.py
src/sim/: hand_simulator.py  hand_view_mujoco.py
tests/: test_macro.py  test_servo_protocol.py
