[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aero-open-hand-controller"
version = "0.1.0"
dependencies = [
    "PyQt6==6.10.2",
    "PyQt6-Qt6==6.10.2",
    "PyQt6_sip==13.11.0",
    "pyserial==3.5",
    "windows-curses==2.4.1",
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0"
]
requires-python = ">= 3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]